--- a/index.html
+++ b/index.html
@@ -6,9 +6,73 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="lib/datCSS/styles.css" type="text/css">
-  
+
+  <!-- jQuery & jQuery ui referenced -->
+  <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+  <!-- Bootstrap -->
+  <!-- <link rel="stylesheet" href="lib/libraries/bootstrap/bootstrap.css">
+  <script src="lib/libraries/bootstrap/bootstrap.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.3/js/tether.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.3/css/tether.css"> -->
+
+  <script src="lib/libraries/materialize.js"></script>
+  <link rel="stylesheet" href="lib/libraries/materialize.css">
+
+
+  <!-- surveyjs -->
+  <script src="http://formbuilder.online/assets/js/form-builder.min.js"></script>
+  <script src="https://formbuilder.online/assets/js/form-render.min.js"></script>
+
   </head>
   <body>
+<div class="container">
+    <h1> BOB </h1>
+    <div class="divider"></div>
+      <form action="#">
+        <p>
+          <input name="group1" type="radio" id="test1" value="1"/>
+          <label for="test1">Red</label>
+        </p>
+        <p>
+          <input name="group1" type="radio" id="test2" />
+          <label for="test2">Yellow</label>
+        </p>
+        <p>
+          <input class="with-gap" name="group1" type="radio" id="test3"  />
+          <label for="test3">Green</label>
+        </p>
+        <p>
+          <input name="group1" type="radio" id="test4" />
+          <label for="test4">Brown</label>
+        </p>
+        <input type="submit">
+
+      </form>
+
+</div>
+
+
+
+<script>
+
+$( "form" ).submit(function( event ){
+  var radioValue = $("input[name=group1]:checked").val()
+  if(radioValue == 1){
+    Materialize.toast('Testing!' + '     ' + radioValue, 4000)
+    console.log(radioValue)
+  }
+
+})
+
+
+
+
+
+
+
+</script>
 
 
 
@@ -21,19 +85,5 @@
 
 
 
-
-
-
-
-
-<!-- Materialize css and js files -->
-<link rel="stylesheet" href="lib/libraries/materialize/materialize.css">
-<script src="lib/libraries/materialize/materialize.js"></script>
-
-
-
-<!-- jQuery & jQuery ui referenced -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js" type="text/javascript"></script>
   </body>
 </html>
