--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
               <span class="card-title">Air conditioning</span>
-              <p>There are around 117 million metric tons of co2 let out into the air every year
+              <p>There are around 117 million metric tons of CO2 let out into the air every year
               from AC's, that's 257,940,846,756 pounds. Three quarters of all homes in the U.S. use
-              air conditioning, so about every home with an AC releases 1064 pounds of co2 into the air
+              air conditioning, so about every home with an AC releases 1064 pounds of CO2 into the air
               each year</p>
             </div>
             <div class="card-action">
@@ -115,9 +115,9 @@
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
               <span class="card-title">Water</span>
-              <p>A single gallon of water when it gets to your home, has emitted .009 pounds of co2 from
+              <p>A single gallon of water when it gets to your home, has emitted .009 pounds of CO2 from
               being processed and treated etc... That's only 4 grams, doesn't sound like much right?
-              But it adds up, if you brush your teeth once a day with the water its 16.2 pounds of co2 and 1800 gallons of water by the end
+              But it adds up, if you brush your teeth once a day with the water its 16.2 pounds of CO2 and 1800 gallons of water by the end
               of the year, twice a day is 32.4</p>
             </div>
             <div class="card-action">
@@ -147,7 +147,7 @@
                 <span class="card-title">Showers!</span>
                 <p>The average shower lasts 8.2 minutes and the average shower head uses 2.1 gallons per minute.
                 Not only that but 80% of men and 90% of women say they shower at least once a day. So it's safe to say that you probably
-                take a shower at least once a day. That would be 365 a year, at that rate it would come to 6,286 gallons, or 56.56 pounds of co2.
+                take a shower at least once a day. That would be 365 a year, at that rate it would come to 6,286 gallons, or 56.56 pounds of CO2.
                 This could be different if you take longer showers or have a water saving showerhead or take them less often. But again this is just a rogh estimate</p>
               </div>
               <div class="card-action">
@@ -177,7 +177,7 @@
                 <div class="card-content white-text">
                   <span class="card-title">Cleaning the dishes</span>
                   <p>The average dishwasher uses only 6 gallons and on average handwashing uses 27 gallons! I know I was surprised!
-                  Dishwashers give off about 770 grams of co2 per use, but handwashing with extravagant use of hot water can give off up to 8000g of co2! So dishwashers are much more enviornmentally friendly! </p>
+                  Dishwashers give off about 770 grams of CO2 per use, but handwashing with extravagant use of hot water can give off up to 8000g of CO2! So dishwashers are much more enviornmentally friendly! </p>
                 </div>
                 <div class="card-action">
                   <a href="https://www.cnet.com/how-to/how-much-water-do-dishwashers-use/">Source</a>
@@ -205,7 +205,7 @@
                 <div class="card blue-grey darken-1">
                   <div class="card-content white-text">
                     <span class="card-title">Laundry Machine and Dryer</span>
-                    <p>The carbon footprint of a load of laundry can use from about 1.3 lbs of co2 to about 7.7 lbs per load. So if you did
+                    <p>The carbon footprint of a load of laundry can use from about 1.3 lbs of CO2 to about 7.7 lbs per load. So if you did
                     2 loads of laundry a week you could be using 104 lbs to 800 lbs a year.</p>
                   </div>
                   <div class="card-action">
@@ -267,7 +267,7 @@
                     <div class="card blue-grey darken-1">
                       <div class="card-content white-text">
                         <span class="card-title">Eating habits!</span>
-                        <p>Vegans release only 6.4 lbs of co2 a day which is 2,336 lbs a year, vegetarians release 8.4 lbs which is 3,066 lbs, meat can use from 10.4 lbs to 15.8 lbs a day depending on how much meat you eat thats 3,796 to 5,621 lbs a year.  </p>
+                        <p>Vegans release only 6.4 lbs of CO2 a day which is 2,336 lbs a year, vegetarians release 8.4 lbs which is 3,066 lbs, meat can use from 10.4 lbs to 15.8 lbs a day depending on how much meat you eat thats 3,796 to 5,621 lbs a year.  </p>
                       </div>
                       <div class="card-action">
                         <a href="https://www.vox.com/2014/7/2/5865109/study-going-vegetarian-could-cut-your-food-carbon-footprint-in-half">Source</a>
@@ -324,7 +324,7 @@
                         <div class="card blue-grey darken-1">
                           <div class="card-content white-text">
                             <span class="card-title">The plastic bag</span>
-                            <p>Each plastic bag produces about 33g of co2, and on average a family uses about 1,500 a year which is about 110 lbs of co2 a year, while that might not be a lot they have other harmful side affects and you should try not to use them.</p>
+                            <p>Each plastic bag produces about 33g of CO2, and on average a family uses about 1,500 a year which is about 110 lbs of CO2 a year, while that might not be a lot they have other harmful side affects and you should try not to use them.</p>
                           </div>
                           <div class="card-action">
                             <a href="http://stopplastics.ca/carbon-footprint-plastic-0">Source</a>
@@ -380,7 +380,7 @@
                             <div class="card blue-grey darken-1">
                               <div class="card-content white-text">
                                 <span class="card-title">Cars vs Public transportation</span>
-                                <p>The average car produces 12,000 lbs of co2 every year, while each mta ride saves around 10 lbs of co2!</p>
+                                <p>The average car produces 12,000 lbs of CO2 every year, while each mta ride saves around 10 lbs of CO2!</p>
                               </div>
                               <div class="card-action">
                                 <a href="http://web.mta.info/sustainability/pdf/2012Report.pdf">Source</a>
@@ -420,7 +420,7 @@
     <div class="divider container"></div>
     <div class="card-content white-text center-align foot container">
 
-      <p>This is what I could do with the time I had, it's just a bit of simple information, that may or may not be surprising to you, and I hope you took somethign away from this. I encourage you to go do more research on your own, as it's our world and we should all do our part to take care of it, it's not as hard as you think, there are many simple things you can do to reduce your carbon footprint even more. I hope you enjoyed have a good day.</p>
+      <p>This is what I could do with the time I had, it's just a bit of simple information, that may or may not be surprising to you, and I hope you took something away from this. I encourage you to go do more research on your own, as it's our world and we should all do our part to take care of it, it's not as hard as you think, there are many simple things you can do to reduce your carbon footprint even more. I hope you enjoyed have a good day.</p>
 
     </div>
   </div>
